# mlops-predictive-maintenance

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
docker/: fastapi.Dockerfile  mlflow.Dockerfile
notebooks/: 01_eda.ipynb  02_ingestion.ipynb
notes/: m1.md
scripts/: docker_train.py  xgboost_challenger.py
src/p6/feature_pipeline/: features.py
src/p6/ingestion/: __init__.py  ingest.py
src/p6/monitoring/: __init__.py  monitor.py
src/p6/orchestration/: __init__.py  flows.py
src/p6/registry/: __init__.py  promote.py
src/p6/retraining/: __init__.py  trigger.py
src/p6/serving/: __init__.py  app.py
src/p6/training/: train.py
src/p6/validation/: __init__.py  validate.py
