[project]
name = "p6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "prefect>=3.6.22",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
